# wakepy

./: .gitignore  .justfile  .readthedocs.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  tasks.py
.devcontainer/: CUSTOMIZATIONS.md  Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  new-wakepy-method-.md
.github/actions/run-tests/: action.yml
.github/workflows/: build-and-run-tests.yml  fast-tests.yml  full-tests.yml  main-tests.yml  pr-tests.yml  publish-a-release.yml
.planning/: PROJECT.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/source/: api-reference.md  changelog.md  cli-api.md  conf.py  installing.md  methods-reference.md  migration.md  modes.md  multithreading.md  post-keepawake-behavior.md  test-manually.md  tests-and-ci.md  user-guide.md  wakepy-mode-lifecycle.md
docs/source/_static/: wakepy-docs.css  wakepy-docs.js
requirements/: requirements-dev.txt
src/wakepy/: __init__.py  __main__.py
src/wakepy/core/: __init__.py  activationresult.py  constants.py  dbus.py  heartbeat.py  method.py  mode.py  platform.py  prioritization.py  registry.py  strenum.py  utils.py
src/wakepy/methods/: _testing.py  freedesktop.py  macos.py  windows.py
src/wakepy/modes/: keep.py
tests/: conftest.py  helpers.py
tests/integration/: test_macos.py
tests/integration/test_dbus/: conftest.py  dbus_service.py  test_dbus_adapters.py
tests/unit/: test__init__.py  test_keep.py  test_main.py  test_modes.py
tests/unit/test_core/: test_activationresult.py  test_calls.py  test_constants.py  test_dbus.py  test_heartbeat.py  test_mode.py  test_platform.py  test_prioritization.py  test_utils.py  testmethods.py
tests/unit/test_core/test_method/: test_activation.py  test_method.py
tests/unit/test_core/test_mode/: test_lifecycle_hooks.py
tests/unit/test_e2e/: test_lifecycle_hooks_thread_safety.py
tests/unit/test_methods/: test_freedesktop.py  test_macos.py  test_windows.py
